# simple-openni

./: CMakeLists.txt  Documentation.md  Examples.md  FAQ.md  HowToBuild.md  IDE.md  Installation.md  Installation_PreOpenNI2.md  ProjectHome.md  ToDo.md  buildWin32.bat
 SimpleOpenNI/: Install.txt
SimpleOpenNI/: CMakeLists.txt  ChangeLog.txt  buildLinux64.sh  buildOsx.sh  buildWin32.bat  buildWin64.bat  installOsx.sh
SimpleOpenNI-2.0/: CMakeLists.txt  buildLinux64.sh  buildOsx.sh  buildWin64.bat  setInstallNamesOsx.sh  setRpathsLinux64.sh
SimpleOpenNI-2.0/src/: ContextWrapper.cpp  SimpleOpenNIMain.i
SimpleOpenNI/include/: ContextWrapper.h  NITE_Helpers.h
SimpleOpenNI/platform/osx/OpenNI_NITE_Installer-OSX/: Readme.txt  install.sh
SimpleOpenNI/platform/osx/OpenNI_NITE_Installer-OSX/data/ni/: modules.xml
SimpleOpenNI/platform/osx/library_localLib/: changeToLoadPath.sh  libSimpleOpenNI.jnilib  libXnVCNite.dylib  showPaths.sh
SimpleOpenNI/src/: ContextWrapper.cpp  NITE_Helpers.cpp  SimpleNite.i  SimpleOpenNI.i  SimpleOpenNIMain.i
SimpleOpenNI/src/p5_src/: SimpleOpenNI.java
branches/SimpleOpenNI_preOpenNI2/platform/osx/library_localLib/: libOpenNI.dylib  libXnDDK.dylib  libXnDeviceSensorV2.dylib  libXnVHandGenerator.dylib  libXnVNite.dylib  libnimMockNodes.dylib
branches/SimpleOpenNI_preOpenNI2/src/p5_src/: SimpleOpenNI.java
include/: ContextWrapper.h
platform/osx/library_localLib/: libXnCore.dylib
platform/osx/library_localLib/ni/: modules.xml
src/: NITE_Helpers.cpp  SimpleNite.i
trunk/ SimpleOpenNI/: CMakeLists.txt
trunk/ SimpleOpenNI/include/: ContextWrapper.h
trunk/SimpleOpenNI/: CMakeLists.txt  ChangeLog.txt  buildLinux32.sh  buildLinux64.sh  buildOsx.sh  buildOsx64.sh  buildWin32.bat  buildWin64.bat  installLinux.sh  installOsx.sh
trunk/SimpleOpenNI-2.0/: CMakeLists.txt  ChangeLog.txt  buildOsx.sh  setInstallNamesOsx.sh  setRpathsLinux64.sh
trunk/SimpleOpenNI-2.0/include/: ContextWrapper.h
trunk/SimpleOpenNI-2.0/src/: ContextWrapper.cpp
trunk/SimpleOpenNI-2.0/src/p5_src/: SimpleOpenNI.java
trunk/SimpleOpenNI/include/: ContextWrapper.h  KinectMotor.h  NITE_Helpers.h
trunk/SimpleOpenNI/platform/osx/OpenNI_NITE_Installer-OSX/: install.sh
trunk/SimpleOpenNI/platform/osx/OpenNI_NITE_Installer-OSX/data/: libXnCore.dylib
trunk/SimpleOpenNI/platform/osx/OpenNI_NITE_Installer-OSX/data/ni/: modules.xml
trunk/SimpleOpenNI/platform/osx/library_localLib/: libXnDeviceFile.dylib  libXnFormats.dylib  libnimCodecs.dylib  libnimRecorder.dylib
trunk/SimpleOpenNI/src/: ContextWrapper.cpp  KinectMotor.cpp  NITE_Helpers.cpp  SimpleNite.i  SimpleOpenNI.i  SimpleOpenNIMain.i
trunk/SimpleOpenNI/src/p5_src/: SimpleOpenNI.java
wiki/: Documentation.wiki  Example.wiki  Examples.wiki  FAQ.wiki  HowToBuild.wiki  IDE.wiki  Installation.wiki  Installation_PreOpenNI2.wiki  ProjectsSimpleOpenNI.wiki  Screenshots.wiki  ToDo.wiki
